--- a/application covid19/citoyenControle.resx
+++ b/application covid19/citoyenControle.resx
@@ -415,4 +415,123 @@
         QiYAAAAAAAAALGQCAAAAAAAAwOee8wJCMd+2o7bDogAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing.Common" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAB7EAAALHCAYAAADo9razAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAX
+        EQAAFxEByibzPwAAGoVJREFUeF7tyDERgEAABDEcMPiX+CYwsDVHkSJNrut+DgAAAAAAAAD8QiYAAAAA
+        AAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAA
+        LGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQC
+        AAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAA
+        AAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAA
+        wEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEIm
+        AAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAA
+        AAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAA
+        ACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxk
+        AgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAA
+        AAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAA
+        AMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBC
+        JgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAA
+        AAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAA
+        AAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAs
+        ZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIA
+        AAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAA
+        AADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADA
+        QiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYA
+        AAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAA
+        AAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAA
+        LGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQC
+        AAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAA
+        AAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAA
+        wEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEIm
+        AAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAA
+        AAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAA
+        ACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxk
+        AgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAA
+        AAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAA
+        AMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBC
+        JgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAA
+        AAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAA
+        AAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAs
+        ZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIA
+        AAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAA
+        AADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADA
+        QiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYA
+        AAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAA
+        AAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAA
+        LGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQC
+        AAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAA
+        AAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAA
+        wEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEIm
+        AAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAA
+        AAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAA
+        ACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxk
+        AgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAA
+        AAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAA
+        AMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBC
+        JgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAA
+        AAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAA
+        AAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAs
+        ZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIA
+        AAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAA
+        AADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADA
+        QiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYA
+        AAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAA
+        AAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAA
+        LGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQC
+        AAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAA
+        AAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAA
+        wEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEIm
+        AAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAA
+        AAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAA
+        ACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxk
+        AgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAA
+        AAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAA
+        AMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBC
+        JgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAA
+        AAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAA
+        AAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAs
+        ZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIA
+        AAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAA
+        AADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADA
+        QiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYA
+        AAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAA
+        AAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAA
+        LGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQC
+        AAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAA
+        AAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAA
+        wEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEIm
+        AAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAA
+        AAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAA
+        ACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxk
+        AgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAA
+        AAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAA
+        AMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBC
+        JgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAA
+        AAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAA
+        AAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAs
+        ZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIA
+        AAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAA
+        AADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADA
+        QiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYA
+        AAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAA
+        AAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAA
+        LGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQC
+        AAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAA
+        AAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAA
+        wEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEIm
+        AAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAA
+        AAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAA
+        ACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxk
+        AgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAA
+        AAAAAMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAA
+        AMBCJgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBC
+        JgAAAAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAA
+        AAAAAAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAA
+        AAAsZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAs
+        ZAIAAAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIA
+        AAAAAADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAA
+        AADAQiYAAAAAAAAALGQCAAAAAAAAwEImAAAAAAAAACxkAgAAAAAAAMBCJgAAAAAAAAAsZAIAAAAAAADA
+        QiYAAAAAAAAALGQCAAAAAAAAwOee8wJCMd+2o7bDogAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
